--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tiny_ai
-description: "A new Flutter plugin project."
+description: "Amazing and Tiny Ai Chat Plugin"
 version: 0.0.1
 homepage:
 
